<resources>
    <string name="app_name">ClayExplorer</string>
    <string name="hint_search">请输入搜索内容或网址</string>
    <string name="search">搜索</string>
    <string name="refresh">刷新</string>
    <string name="history">历史</string>
    <string name="label">书签</string>
    <string name="download">下载</string>
    <string name="share">分享</string>
    <string name="setting">设置</string>
    <string name="finish">退出</string>
</resources>
