<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/show_history"
        android:icon="@mipmap/history"
        android:title="@string/history"/>
    <item android:id="@+id/show_label"
        android:icon="@mipmap/label"
        android:title="@string/label"/>
    <item android:id="@+id/show_download"
        android:icon="@mipmap/download"
        android:title="@string/download"/>
    <item android:id="@+id/show_share"
        android:icon="@mipmap/share"
        android:title="@string/share"/>
    <item android:id="@+id/show_set"
        android:icon="@mipmap/setting"
        android:title="@string/setting"/>
    <item android:id="@+id/show_finish"
        android:icon="@mipmap/finish"
        android:title="@string/finish"/>

</menu>